--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main>
         <!--Hero-->
         <section class="hero">
-        <div class="conteiner">
+        <div class="conteiner-hero">
             <div class="hero-content">
                 <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
                 <button class="hero-btn" type="button">Заказать услугу</button>
@@ -44,22 +44,18 @@
         <div class="conteiner">
             <ul class="slogan-list list">
                 <li class="slogan-item">
-                    <img src="./images/antenna.svg" alt="Антена">
                     <h3 class="slogan-title">Внимание к деталям</h3>
                     <p class="slogan-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li class="slogan-item">
-                    <img src="./images/clock.svg" alt="Часы">
                     <h3 class="slogan-title">Пунктуальность</h3>
                     <p class="slogan-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li class="slogan-item">
-                    <img src="./images/diagram.svg" alt="Диаграмв">
                     <h3 class="slogan-title">Планирование</h3>
                     <p class="slogan-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li class="slogan-item">
-                    <img src="./images/astronaut.svg" alt="Астронавт">
                     <h3 class="slogan-title">Современные технологии</h3>
                     <p class="slogan-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
