--- a/index.html
+++ b/index.html
@@ -24,8 +24,15 @@
         </ul>
     </nav>
         <div class="header-connect">
-        <a href="mailto:info@devstudio.com" class="header-mail link">info@devstudio.com</a>
-        <a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a>
+        <a href="mailto:info@devstudio.com" class="header-mail link">
+        <svg class="header-mail-svg" width="16" height="12">
+            <use href="./icons/symbol-defs.svg#icon-envelope"></use>
+        </svg> info@devstudio.com</a>
+        
+        <a href="tel:+380961111111" class="header-tel link">
+            <svg class="header-mail-svg" width="10" height="16">
+            <use href="./icons/symbol-defs.svg#icon-smartphone"></use>
+            </svg> +38 096 111 11 11</a>
         </div>
         </div>
     </header>
@@ -44,18 +51,38 @@
         <div class="conteiner">
             <ul class="slogan-list list">
                 <li class="slogan-item">
+                    <svg class="slogan-icon"
+                    width="70" 
+                    height="70">
+                        <use href="./icons/symbol-defs.svg#icon-antenna"></use>
+                    </svg>                    
                     <h3 class="slogan-title">Внимание к деталям</h3>
                     <p class="slogan-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li class="slogan-item">
+                    <svg class="slogan-icon"
+                    width="70" 
+                    height="70">
+                        <use href="./icons/symbol-defs.svg#icon-clock"></use>
+                    </svg>                    
                     <h3 class="slogan-title">Пунктуальность</h3>
                     <p class="slogan-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li class="slogan-item">
+                    <svg class="slogan-icon"
+                    width="70" 
+                    height="70">
+                        <use href="./icons/symbol-defs.svg#icon-diagram"></use>
+                    </svg>                    
                     <h3 class="slogan-title">Планирование</h3>
                     <p class="slogan-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li class="slogan-item">
+                    <svg class="slogan-icon"
+                    width="70" 
+                    height="70">
+                        <use href="./icons/symbol-defs.svg#icon-astronaut"></use>
+                    </svg>                    
                     <h3 class="slogan-title">Современные технологии</h3>
                     <p class="slogan-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
@@ -93,6 +120,44 @@
                 <div class="command-text"> 
                     <h3 class="command-name">Игорь Демьяненко</h3>
                     <p class="command-work">Product Designer</p>
+                    <ul class="command-soc-list list">
+                        <li class="command-soc-item">
+                            <a href="" class="command-soc-link">
+                                <svg class="command-soc-icon"
+                                width="20" 
+                                height="20">
+                                    <use href="./icons/symbol-defs.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="command-soc-item">
+                            <a href="" class="command-soc-link">
+                                <svg class="command-soc-icon"
+                                width="20" 
+                                height="20">
+                                    <use href="./icons/symbol-defs.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="command-soc-item">
+                            <a href="" class="command-soc-link">
+                                <svg class="command-soc-icon"
+                                width="20" 
+                                height="20">
+                                    <use href="./icons/symbol-defs.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="command-soc-item">
+                            <a href="" class="command-soc-link">
+                                <svg class="command-soc-icon"
+                                width="20" 
+                                height="20">
+                                    <use href="./icons/symbol-defs.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
                 </li>
                 <li class="command-item"><img src="./images/img1.jpg" alt="Ольга Репина"
@@ -101,6 +166,44 @@
                         <div class="command-text"> 
                     <h3 class="command-name">Ольга Репина</h3>
                     <p class="command-work">Frontend Developer</p>
+                    <ul class="command-soc-list list">
+                        <li class="command-soc-item">
+                            <a href="" class="command-soc-link">
+                                <svg class="command-soc-icon"
+                                width="20" 
+                                height="20">
+                                    <use href="./icons/symbol-defs.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="command-soc-item">
+                            <a href="" class="command-soc-link">
+                                <svg class="command-soc-icon"
+                                width="20" 
+                                height="20">
+                                    <use href="./icons/symbol-defs.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="command-soc-item">
+                            <a href="" class="command-soc-link">
+                                <svg class="command-soc-icon"
+                                width="20" 
+                                height="20">
+                                    <use href="./icons/symbol-defs.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="command-soc-item">
+                            <a href="" class="command-soc-link">
+                                <svg class="command-soc-icon"
+                                width="20" 
+                                height="20">
+                                    <use href="./icons/symbol-defs.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
                 </li>
                 <li class="command-item"><img src="./images/img2.jpg" alt="Николай Тарасов"
@@ -109,6 +212,44 @@
                         <div class="command-text"> 
                     <h3 class="command-name">Николай Тарасов</h3>
                     <p class="command-work">Marketing</p>
+                    <ul class="command-soc-list list">
+                        <li class="command-soc-item">
+                            <a href="" class="command-soc-link">
+                                <svg class="command-soc-icon"
+                                width="20" 
+                                height="20">
+                                    <use href="./icons/symbol-defs.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="command-soc-item">
+                            <a href="" class="command-soc-link">
+                                <svg class="command-soc-icon"
+                                width="20" 
+                                height="20">
+                                    <use href="./icons/symbol-defs.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="command-soc-item">
+                            <a href="" class="command-soc-link">
+                                <svg class="command-soc-icon"
+                                width="20" 
+                                height="20">
+                                    <use href="./icons/symbol-defs.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="command-soc-item">
+                            <a href="" class="command-soc-link">
+                                <svg class="command-soc-icon"
+                                width="20" 
+                                height="20">
+                                    <use href="./icons/symbol-defs.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
                 </li>
                 <li class="command-item"><img src="./images/img3.jpg" alt="Михаил Ермаков"
@@ -117,6 +258,44 @@
                         <div class="command-text"> 
                     <h3 class="command-name">Михаил Ермаков</h3>
                     <p class="command-work">UI Designer</p>
+                    <ul class="command-soc-list list">
+                        <li class="command-soc-item">
+                            <a href="" class="command-soc-link">
+                                <svg class="command-soc-icon"
+                                width="20" 
+                                height="20">
+                                    <use href="./icons/symbol-defs.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="command-soc-item">
+                            <a href="" class="command-soc-link">
+                                <svg class="command-soc-icon"
+                                width="20" 
+                                height="20">
+                                    <use href="./icons/symbol-defs.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="command-soc-item">
+                            <a href="" class="command-soc-link">
+                                <svg class="command-soc-icon"
+                                width="20" 
+                                height="20">
+                                    <use href="./icons/symbol-defs.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="command-soc-item">
+                            <a href="" class="command-soc-link">
+                                <svg class="command-soc-icon"
+                                width="20" 
+                                height="20">
+                                    <use href="./icons/symbol-defs.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
                 </li>
             </ul>
@@ -127,12 +306,60 @@
         <div class="conteiner">
             <h2 class="clients-title">Постоянные клиенты</h2>
             <ul class="clients-list list">
-                <li class="clients-item"><img src="./images/Client 1.svg" alt="компания1"></li>
-                <li class="clients-item"><img src="./images/Client 2.svg" alt="компания2"></li>
-                <li class="clients-item"><img src="./images/Client 3.svg" alt="компания3"></li>
-                <li class="clients-item"><img src="./images/Client 4.svg" alt="компания4"></li>
-                <li class="clients-item"><img src="./images/Client 5.svg" alt="компания5"></li>
-                <li class="clients-item"><img src="./images/Client 6.svg" alt="компания6"></li>
+                <li class="clients-item">
+                    <a href="" class="clients-link">
+                        <svg class="clients-link-svg"
+                        width="106" 
+                        height="60">
+                            <use href="./icons/symbol-defs.svg#icon-Logo1"></use>
+                        </svg>
+                    </a>                    
+                </li>
+                <li class="clients-item">
+                    <a href="" class="clients-link">
+                        <svg class="clients-link-svg"
+                        width="106" 
+                        height="60">
+                            <use href="./icons/symbol-defs.svg#icon-Logo2"></use>
+                        </svg>
+                    </a>                    
+                </li>
+                <li class="clients-item">
+                    <a href="" class="clients-link">
+                        <svg class="clients-link-svg"
+                        width="106" 
+                        height="60">
+                            <use href="./icons/symbol-defs.svg#icon-Logo3"></use>
+                        </svg>
+                    </a>                    
+                </li>
+                <li class="clients-item">
+                    <a href="" class="clients-link">
+                        <svg class="clients-link-svg"
+                        width="106" 
+                        height="60">
+                            <use href="./icons/symbol-defs.svg#icon-Logo4"></use>
+                        </svg>
+                    </a>                    
+                </li>
+                <li class="clients-item">
+                    <a href="" class="clients-link">
+                        <svg class="clients-link-svg"
+                        width="106" 
+                        height="60">
+                            <use href="./icons/symbol-defs.svg#icon-Logo5"></use>
+                        </svg>
+                    </a>                    
+                </li>
+                <li class="clients-item">
+                    <a href="" class="clients-link">
+                        <svg class="clients-link-svg"
+                        width="106" 
+                        height="60">
+                            <use href="./icons/symbol-defs.svg#icon-Logo6"></use>
+                        </svg>
+                    </a>                    
+                </li>
             </ul>
         </div>
         </section>
@@ -140,12 +367,56 @@
 <!--Подвал-->
     <footer class="footer">
     <div class="conteiner">
-        <a class="footer-logo link" href="./index.html"> Web<span class="footer-logo-style">Studio</span> </a>
-       <address class="footer-address">
+        <div class="footer-list">
+        <section class="footer-address">
+            <a class="footer-logo link" href="./index.html"> Web<span class="footer-logo-style">Studio</span> </a>
             <p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p> 
             <a class="footer-mail link" href="mailto:info@example.com">info@example.com</a>
             <a class="footer-tel link" href="tel:+380991111111">+38 099 111 11 11</a>   
-       </address>
+       </section>
+
+       <section class="footer-soc">
+           <h3 class="footer-soc-title">присоединяйтесь</h3>
+           <ul class="command-soc-list list">
+            <li class="command-soc-item">
+                <a href="" class="footer-soc-link">
+                    <svg class="command-soc-icon"
+                    width="20" 
+                    height="20">
+                        <use href="./icons/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="command-soc-item">
+                <a href="" class="footer-soc-link">
+                    <svg class="command-soc-icon"
+                    width="20" 
+                    height="20">
+                        <use href="./icons/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="command-soc-item">
+                <a href="" class="footer-soc-link">
+                    <svg class="command-soc-icon"
+                    width="20" 
+                    height="20">
+                        <use href="./icons/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="command-soc-item">
+                <a href="" class="footer-soc-link">
+                    <svg class="command-soc-icon"
+                    width="20" 
+                    height="20">
+                        <use href="./icons/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>           
+       </section>
+    </div>
     </div>
     </footer>
 </body>
