--- a/portfolio.html
+++ b/portfolio.html
@@ -25,8 +25,15 @@
     </ul>
 </nav>
     <div class="header-connect">
-    <a href="mailto:info@devstudio.com" class="header-mail link">info@devstudio.com</a>
-    <a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a>
+    <a href="mailto:info@devstudio.com" class="header-mail link">
+    <svg class="header-mail-svg" width="16" height="12">
+        <use href="./icons/symbol-defs.svg#icon-envelope"></use>
+    </svg> info@devstudio.com</a>
+    
+    <a href="tel:+380961111111" class="header-tel link">
+        <svg class="header-mail-svg" width="10" height="16">
+        <use href="./icons/symbol-defs.svg#icon-smartphone"></use>
+        </svg> +38 096 111 11 11</a>
     </div>
     </div>
 </header>
@@ -132,12 +139,56 @@
 <!--Подвал-->
 <footer class="footer">
     <div class="conteiner">
-        <a class="footer-logo link" href="./index.html"> Web<span class="footer-logo-style">Studio</span> </a>
-       <address class="footer-address">
+        <div class="footer-list">
+        <section class="footer-address">
+            <a class="footer-logo link" href="./index.html"> Web<span class="footer-logo-style">Studio</span> </a>
             <p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p> 
             <a class="footer-mail link" href="mailto:info@example.com">info@example.com</a>
             <a class="footer-tel link" href="tel:+380991111111">+38 099 111 11 11</a>   
-       </address>
+       </section>
+
+       <section class="footer-soc">
+           <h3 class="footer-soc-title">присоединяйтесь</h3>
+           <ul class="command-soc-list list">
+            <li class="command-soc-item">
+                <a href="" class="footer-soc-link">
+                    <svg class="command-soc-icon"
+                    width="20" 
+                    height="20">
+                        <use href="./icons/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="command-soc-item">
+                <a href="" class="footer-soc-link">
+                    <svg class="command-soc-icon"
+                    width="20" 
+                    height="20">
+                        <use href="./icons/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="command-soc-item">
+                <a href="" class="footer-soc-link">
+                    <svg class="command-soc-icon"
+                    width="20" 
+                    height="20">
+                        <use href="./icons/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="command-soc-item">
+                <a href="" class="footer-soc-link">
+                    <svg class="command-soc-icon"
+                    width="20" 
+                    height="20">
+                        <use href="./icons/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>           
+       </section>
+    </div>
     </div>
     </footer>
 </body>
