--- a/index.html
+++ b/index.html
@@ -51,38 +51,46 @@
         <div class="conteiner">
             <ul class="slogan-list list">
                 <li class="slogan-item">
-                    <svg class="slogan-icon"
-                    width="70" 
-                    height="70">
+                    <div class="slogan-icon-pic">
+                        <svg class="slogan-icon"
+                        width="70" 
+                        height="70">
                         <use href="./icons/symbol-defs.svg#icon-antenna"></use>
-                    </svg>                    
+                        </svg>
+                    </div>                    
                     <h3 class="slogan-title">Внимание к деталям</h3>
                     <p class="slogan-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li class="slogan-item">
-                    <svg class="slogan-icon"
-                    width="70" 
-                    height="70">
+                    <div class="slogan-icon-pic">
+                        <svg class="slogan-icon"
+                        width="70" 
+                        height="70">
                         <use href="./icons/symbol-defs.svg#icon-clock"></use>
-                    </svg>                    
+                        </svg>
+                    </div>                    
                     <h3 class="slogan-title">Пунктуальность</h3>
                     <p class="slogan-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li class="slogan-item">
-                    <svg class="slogan-icon"
-                    width="70" 
-                    height="70">
+                    <div class="slogan-icon-pic">
+                        <svg class="slogan-icon"
+                        width="70" 
+                        height="70">
                         <use href="./icons/symbol-defs.svg#icon-diagram"></use>
-                    </svg>                    
+                        </svg>
+                    </div>                        
                     <h3 class="slogan-title">Планирование</h3>
                     <p class="slogan-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li class="slogan-item">
-                    <svg class="slogan-icon"
-                    width="70" 
-                    height="70">
+                    <div class="slogan-icon-pic">
+                        <svg class="slogan-icon"
+                        width="70" 
+                        height="70">
                         <use href="./icons/symbol-defs.svg#icon-astronaut"></use>
-                    </svg>                    
+                        </svg>
+                    </div>                   
                     <h3 class="slogan-title">Современные технологии</h3>
                     <p class="slogan-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
